--- a/retinanet_dataset_train.ipynb
+++ b/retinanet_dataset_train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excited-richardson",
+   "id": "periodic-thunder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extreme-swimming",
+   "id": "theoretical-worry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "# sys.path.insert(0, \"/home/vision\")\n",
-    "\n",
     "import torchvision\n",
     "import torch"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "respective-christopher",
+   "id": "alpine-operation",
    "metadata": {},
    "source": [
     "### dataset"
@@ -35,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considered-stranger",
+   "id": "collectible-edwards",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stopped-generic",
+   "id": "casual-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neither-ethernet",
+   "id": "smoking-valuation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,17 +151,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-albany",
+   "id": "hydraulic-hundred",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_notf = BirdDataset()"
+    "ds_notf = BirdDataset(image_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "animated-massage",
+   "id": "muslim-trash",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "psychological-duration",
+   "id": "addressed-strength",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-merchant",
+   "id": "cooperative-thomas",
    "metadata": {},
    "source": [
     "## train"
@@ -197,17 +194,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polish-milton",
+   "id": "perceived-radiation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = BirdDataset(transform=transform)"
+    "from retinanet.model.detection import retinanet_resnet50_fpn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satisfactory-thought",
+   "id": "outer-warning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = BirdDataset(image_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\", transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "prepared-brush",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,19 +224,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decreased-anderson",
+   "id": "demanding-pearl",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torchvision.models.detection.retinanet_resnet50_fpn(num_classes=2,\n",
-    "                                                            pretrained=False,\n",
-    "                                                            pretrained_backbone=False)"
+    "model = retinanet_resnet50_fpn(num_classes=2,\n",
+    "                                pretrained=False,\n",
+    "                                pretrained_backbone=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "harmful-phoenix",
+   "id": "reliable-factor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romance-welding",
+   "id": "meaningful-commerce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "revolutionary-converter",
+   "id": "acute-broadway",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satisfactory-combining",
+   "id": "musical-version",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defensive-access",
+   "id": "complex-parker",
    "metadata": {},
    "source": [
     "### Eval"
@@ -302,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legal-ribbon",
+   "id": "chemical-auditor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brutal-matrix",
+   "id": "precise-electricity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unknown-medication",
+   "id": "enclosed-providence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polyphonic-advocacy",
+   "id": "suffering-rotation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closing-market",
+   "id": "lovely-combine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,14 +371,6 @@
     "plt.imshow(img,cmap='gray')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "final-remove",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
