Retinanet base training script & dataset

--- a/retinanet_dataset_train.ipynb
+++ b/retinanet_dataset_train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "periodic-thunder",
+   "id": "sized-finish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "regulated-retirement",
+   "metadata": {},
+   "source": [
+    "## Train"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "theoretical-worry",
+   "id": "stuck-lobby",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py --lr 0.00001 --max_epoch 100 --batch_size 4 --tag base_retinanet_pretrained --log_dir $(pwd)/experiments --train_percent .7 --use_p_of_data 1 --data_dir $(pwd)/../dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dominican-baker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "chubby-coordinate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,135 +51,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpine-operation",
+   "id": "threatened-benefit",
    "metadata": {},
    "source": [
-    "### dataset"
+    "## Dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collectible-edwards",
+   "id": "actual-donor",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "import os\n",
     "import cv2\n",
-    "import xml.dom.minidom"
+    "from retinanet.datasets.bird import BirdDataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "casual-seven",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BirdDataset(Dataset):\n",
-    "    def __init__(self, image_dir=\"./data\", annotations_dir=\"./ann\",transform=None):\n",
-    "        self.files_name = os.listdir(image_dir)\n",
-    "        self.image_dir = image_dir\n",
-    "        self.annotaions_dir = annotations_dir\n",
-    "        self.transforms = transform\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.files_name)\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "        if torch.is_tensor(idx):\n",
-    "            idx = idx.tolist()\n",
-    "            \n",
-    "        file_name, _ = os.path.splitext(self.files_name[idx])\n",
-    "        img_path = os.path.join(self.image_dir, file_name + \".png\")\n",
-    "        xml_path = os.path.join(self.annotaions_dir, file_name + \".xml\")\n",
-    "        \n",
-    "        img = cv2.imread(img_path)\n",
-    "        ann = self.read_annotaions(xml_path)\n",
-    "        lbl = [1 for _ in range(len(ann))]\n",
-    "        \n",
-    "        target = {\"boxes\": ann, \"labels\": lbl}\n",
-    "        \n",
-    "        if self.transforms is not None:\n",
-    "            img, target = self.transforms(img, target)\n",
-    "        \n",
-    "        return img, target\n",
-    "        \n",
-    "    def read_annotaions(self, xml_path):\n",
-    "        res = []\n",
-    "        \n",
-    "        dom = xml.dom.minidom.parse(xml_path)\n",
-    "        root = dom.documentElement\n",
-    "        objects=dom.getElementsByTagName(\"object\")\n",
-    "        for obj in objects:\n",
-    "            bndbox = obj.getElementsByTagName('bndbox')[0]\n",
-    "            xmin = bndbox.getElementsByTagName('xmin')[0]\n",
-    "            ymin = bndbox.getElementsByTagName('ymin')[0]\n",
-    "            xmax = bndbox.getElementsByTagName('xmax')[0]\n",
-    "            ymax = bndbox.getElementsByTagName('ymax')[0]\n",
-    "            xmin_data=xmin.childNodes[0].data\n",
-    "            ymin_data=ymin.childNodes[0].data\n",
-    "            xmax_data=xmax.childNodes[0].data\n",
-    "            ymax_data=ymax.childNodes[0].data\n",
-    "            res.append([int(xmin_data),\n",
-    "                        int(ymin_data),\n",
-    "                        int(xmax_data),\n",
-    "                        int(ymax_data)])\n",
-    "            \n",
-    "        return res\n",
-    "    \n",
-    "    def collate_fn(self, batch):\n",
-    "        imgs = [item[0] for item in batch]\n",
-    "        trgts = [item[1] for item in batch]\n",
-    "        \n",
-    "        return [imgs, trgts]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "smoking-valuation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torchvision.transforms import functional as F\n",
-    "import numpy as np\n",
-    "\n",
-    "class ToTensor(object):\n",
-    "    def __call__(self, image, target):\n",
-    "        image = F.to_tensor(image)\n",
-    "        for key, value in target.items():\n",
-    "            target[key] = torch.as_tensor(np.array(value), dtype=torch.int64)\n",
-    "        return image, target\n",
-    "\n",
-    "\n",
-    "class Normalize(object):\n",
-    "    def __init__(self, mean, std):\n",
-    "        self.mean = mean\n",
-    "        self.std = std\n",
-    "\n",
-    "    def __call__(self, image, target):\n",
-    "        image = F.normalize(image, mean=self.mean, std=self.std)\n",
-    "        return image, target\n",
-    "    \n",
-    "class Compose(object):\n",
-    "    def __init__(self, transforms):\n",
-    "        self.transforms = transforms\n",
-    "\n",
-    "    def __call__(self, image, target):\n",
-    "        for t in self.transforms:\n",
-    "            image, target = t(image, target)\n",
-    "        return image, target\n",
-    "    \n",
-    "transform = Compose([ToTensor(),\n",
-    "                     Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]) ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hydraulic-hundred",
+   "id": "growing-yahoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "muslim-trash",
+   "id": "pleased-iraqi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addressed-strength",
+   "id": "small-thanks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,142 +106,83 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cooperative-thomas",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "recreational-joining",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## train"
+    "from retinanet.datasets.transforms import *\n",
+    "from retinanet.datasets.utils import TransformDatasetWrapper"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "perceived-radiation",
+   "id": "defensive-march",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from retinanet.model.detection import retinanet_resnet50_fpn"
+    "transform = Compose(\n",
+    "    [\n",
+    "        ToTensor(),\n",
+    "        Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outer-warning",
+   "id": "random-ballet",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = BirdDataset(image_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\", transform=transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "prepared-brush",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dl = DataLoader(dataset=ds, collate_fn=ds.collate_fn, batch_size=1, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "demanding-pearl",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = retinanet_resnet50_fpn(num_classes=2,\n",
-    "                                pretrained=False,\n",
-    "                                pretrained_backbone=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "reliable-factor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "meaningful-commerce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.optim as optim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acute-broadway",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = optim.Adam(model.parameters(), lr=1e-5)\n",
-    "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, patience=3, verbose=True)\n",
-    "epochs = 10\n",
-    "\n",
-    "epoch_loss = []\n",
-    "for epoch in range(1, epochs):\n",
-    "    for i_batch, batch in enumerate(dl):\n",
-    "        optimizer.zero_grad()\n",
-    "        \n",
-    "        losses = model(*batch)\n",
-    "\n",
-    "        loss = losses[\"classification\"] + losses[\"bbox_regression\"]\n",
-    "        loss.backward()\n",
-    "\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 0.1)\n",
-    "\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        epoch_loss.append(float(loss))\n",
-    "        \n",
-    "        print('Epoch: {} | batch: {} | Classification loss: {:1.5f} | Regression loss: {:1.5f} | Running loss: {:1.5f}'.format(\n",
-    "            epoch,\n",
-    "            i_batch+1,\n",
-    "            float(losses[\"classification\"].detach().numpy()),\n",
-    "            float(losses[\"bbox_regression\"].detach().numpy()),\n",
-    "            float(loss.detach().numpy())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "musical-version",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.save(model.state_dict(), \"./chpt.pth\")"
+    "ds = TransformDatasetWrapper(ds_notf, transform)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "complex-parker",
+   "id": "modified-expansion",
    "metadata": {},
    "source": [
-    "### Eval"
+    "## Evaluation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chemical-auditor",
+   "id": "traditional-insurance",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"./chpt.pth\"))"
+    "from retinanet.model.detection.retinanet import retinanet_resnet50_fpn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "precise-electricity",
+   "id": "sophisticated-dryer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "labeled-automation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/chpt_base_retinanet.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hungry-editing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enclosed-providence",
+   "id": "anticipated-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suffering-rotation",
+   "id": "optional-bunny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lovely-combine",
+   "id": "polyphonic-observer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
