Added image level classification head to RetinaNet
1. A fully convolutional layer added on top of FPN features
TODO:
1. Visualize feature layers
2. visualize instances of network errors
3. try batch normalization and larger lr
4. use only last layers features to train img-classification head
5. use pretrained weights
6. if pretrained was better, use another large classification dataset
to pretrain the backbone network

--- a/retinanet_dataset_train.ipynb
+++ b/retinanet_dataset_train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sized-finish",
+   "id": "acquired-tennis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,26 +12,93 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulated-retirement",
+   "id": "competent-groove",
    "metadata": {},
    "source": [
     "## Train"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "stuck-lobby",
+   "cell_type": "markdown",
+   "id": "toxic-romania",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py --lr 0.00001 --max_epoch 100 --batch_size 4 --tag base_retinanet_pretrained --log_dir $(pwd)/experiments --train_percent .7 --use_p_of_data 1 --data_dir $(pwd)/../dataset"
+    "#### First we train the default RetinaNet model on Detection data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dominican-baker",
+   "id": "cosmetic-neighbor",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py --lr 0.00001 --max_epoch 100 --batch_size 4 --tag retinanet_with_img_cls_bboxes --log_dir $(pwd)/experiments --train_percent .7 --use_p_of_data 1 --data_dir $(pwd)/../dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "threaded-mainstream",
+   "metadata": {},
+   "source": [
+    "#### Then we train the feature extraction pyramid network on a image level classification task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intellectual-danger",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install py3nvml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "reasonable-century",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For GPU mamory trace use this instead of the cell bellow and uncomment the sys.trace... line in the script\n",
+    "!PYTHONPATH=$(pwd) CUDA_VISIBLE_DEVICES=0 GPU_DEBUG=0 python ./scripts/image_cls_train.py --lr 0.0001 --max_epoch 100 --batch_size 4 --tag retinanet_with_img_cls --pretrain $(pwd)/experiments/checkpoints/best_chpt_retinanet_with_img_cls_bboxes.pth --train_percent .85 --use_p_of_data 1 --data_dir $(pwd)/../data/train --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "emotional-luxury",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py --lr 0.0001 --max_epoch 100 --batch_size 8 --tag retinanet_with_img_cls_images --pretrain $(pwd)/experiments/checkpoints/best_chpt_retinanet_with_img_cls_bboxes.pth --train_percent .85 --use_p_of_data 1 --data_dir $(pwd)/../data/train --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cardiac-weather",
+   "metadata": {},
+   "source": [
+    "#### Now, finetuning on detection should give better results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "humanitarian-acting",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py --lr 0.00001 --max_epoch 100 --batch_size 4 --tag retinanet_with_img_cls_bboxes_fineyune_after_cls --pretrain $(pwd)/experiments/checkpoints/best_chpt_retinanet_with_img_cls_images.pth --log_dir $(pwd)/experiments --train_percent .7 --use_p_of_data 1 --data_dir $(pwd)/../dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "broadband-fisher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +108,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-coordinate",
+   "id": "frank-nurse",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "innocent-tracker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-benefit",
+   "id": "economic-authority",
    "metadata": {},
    "source": [
     "## Dataset"
@@ -60,30 +137,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "actual-donor",
+   "id": "loving-deficit",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "import os\n",
     "import cv2\n",
-    "from retinanet.datasets.bird import BirdDataset"
+    "from retinanet.datasets.bird import BirdDetection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "growing-yahoo",
+   "id": "capital-replication",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_notf = BirdDataset(image_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\")"
+    "ds_notf = BirdDetection(image_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleased-iraqi",
+   "id": "pretty-consultancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "small-thanks",
+   "id": "weighted-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recreational-joining",
+   "id": "genetic-failing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defensive-march",
+   "id": "entertaining-edward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "random-ballet",
+   "id": "surrounded-sustainability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modified-expansion",
+   "id": "revolutionary-breast",
    "metadata": {},
    "source": [
     "## Evaluation"
@@ -152,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "traditional-insurance",
+   "id": "available-explosion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sophisticated-dryer",
+   "id": "premium-legislature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,53 +249,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "labeled-automation",
+   "id": "talented-pixel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/chpt_base_retinanet.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_retinanet_with_img_cls_bboxes_fineyune_after_cls.pth\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungry-editing",
+   "id": "forced-electricity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "behind-trinidad",
    "metadata": {},
    "outputs": [],
    "source": [
     "model.eval()\n",
     "\n",
-    "predicted = model([ds[2][0]])"
+    "predicted = model([ds[idx][0]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "anticipated-gardening",
+   "id": "intended-security",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted"
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optional-bunny",
+   "id": "instructional-father",
    "metadata": {},
    "outputs": [],
    "source": [
-    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "polyphonic-observer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "item = ds_notf[2]\n",
+    "item = ds_notf[idx]\n",
     "img = item[0]\n",
     "oboxes = item[1][\"boxes\"]\n",
     "\n",
