--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -89,6 +89,173 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Train Detection from scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
+    "                            --lr 3e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 4 \\\n",
+    "                            --tag 0_1_det_scratch \\\n",
+    "                            --train_percent .7 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1_det_scratch.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = random.randint(0, len(dataset)-1)\n",
+    "img = dataset[idx][0]\n",
+    "\n",
+    "model.eval()\n",
+    "#get features\n",
+    "features = get_features(model, [img], device)\n",
+    "\n",
+    "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
+    "\n",
+    "# print(img.shape)\n",
+    "# for feat in imact:\n",
+    "#     print(feat.shape)\n",
+    "#     print(resize_func(feat, img.shape[1:]).shape)\n",
+    "\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
+    "for j in range(1, 6):\n",
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Detection transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
+    "                            --lr 3e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 4 \\\n",
+    "                            --tag 0_2_det_transferlr \\\n",
+    "                            --pretrained_backend \\\n",
+    "                            --train_percent .7 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2_det_transferlr.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = random.randint(0, len(dataset)-1)\n",
+    "img = dataset[idx][0]\n",
+    "\n",
+    "model.eval()\n",
+    "#get features\n",
+    "features = get_features(model, [img], device)\n",
+    "\n",
+    "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
+    "\n",
+    "# print(img.shape)\n",
+    "# for feat in imact:\n",
+    "#     print(feat.shape)\n",
+    "#     print(resize_func(feat, img.shape[1:]).shape)\n",
+    "\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
+    "for j in range(1, 6):\n",
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train Image Level Classifier from scratch"
    ]
   },
@@ -101,7 +268,19 @@
    },
    "outputs": [],
    "source": [
-    "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py --lr 0.00001 --max_epoch 100 --batch_size 8 --tag 1_1_img_cls_scratch --train_percent .90 --use_p_of_data 1 --data_dir $(pwd)/../data/train --log_dir $(pwd)/experiments"
+    "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
+    "                        --opt sgd \\\n",
+    "                        --lr 3e-4 \\\n",
+    "                        --lr_delta 1e-6 \\\n",
+    "                        --weight_decay 0.01 \\\n",
+    "                        --max_epoch 100 \\\n",
+    "                        --batch_size 12 \\\n",
+    "                        --accumulation_steps 3 \\\n",
+    "                        --tag 1_1_img_cls_scratch \\\n",
+    "                        --train_percent .90 \\\n",
+    "                        --use_p_of_data 1 \\\n",
+    "                        --data_dir $(pwd)/../data/train \\\n",
+    "                        --log_dir $(pwd)/experiments"
    ]
   },
   {
@@ -143,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finetune on Detection Task\n",
+    "### Finetune on Detection Task\n",
     "#### (from scratch)"
    ]
   },
@@ -156,7 +335,17 @@
    },
    "outputs": [],
    "source": [
-    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py --lr 0.00001 --max_epoch 100 --batch_size 4 --tag 1_2_ft_det_scratch --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth --train_percent .7 --use_p_of_data 1 --data_dir $(pwd)/../dataset --log_dir $(pwd)/experiments"
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
+    "                            --lr 3e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 4 \\\n",
+    "                            --tag 1_2_ft_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth \\\n",
+    "                            --train_percent .7 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --log_dir $(pwd)/experiments"
    ]
   },
   {
@@ -210,7 +399,20 @@
    },
    "outputs": [],
    "source": [
-    "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py --lr 0.001 --max_epoch 100 --batch_size 12 --tag 2_1_img_cls_transferlr --pretrained_backend --train_percent .90 --use_p_of_data 1 --data_dir $(pwd)/../data/train --log_dir $(pwd)/experiments"
+    "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
+    "                            --opt sgd \\\n",
+    "                            --lr 3e-4 \\\n",
+    "                            --lr_delta 1e-6 \\\n",
+    "                            --weight_decay 1e-4 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 12 \\\n",
+    "                            --accumulation_steps 3 \\\n",
+    "                            --tag 2_1_img_cls_transferlr \\\n",
+    "                            --pretrained_backend \\\n",
+    "                            --train_percent .90 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../data/train \\\n",
+    "                            --log_dir $(pwd)/experiments"
    ]
   },
   {
@@ -252,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finetune on Detection Task\n",
+    "### Finetune on Detection Task\n",
     "#### (transfer learning)"
    ]
   },
@@ -265,7 +467,17 @@
    },
    "outputs": [],
    "source": [
-    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py --lr 0.00001 --max_epoch 100 --batch_size 4 --tag 2_2_ft_det_transferlr --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth --train_percent .7 --use_p_of_data 1 --data_dir $(pwd)/../dataset --log_dir $(pwd)/experiments"
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
+    "                            --lr 3e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 4 \\\n",
+    "                            --tag 2_2_ft_det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\\n",
+    "                            --train_percent .7 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --log_dir $(pwd)/experiments"
    ]
   },
   {
@@ -313,7 +525,7 @@
     "# visualize boxes\n",
     "print(len(boxes))\n",
     "for box, score in zip(boxes, scores):\n",
-    "    if score > 0.2:\n",
+    "    if score > 0.3:\n",
     "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
     "\n",
     "axarr[0, 0].imshow(img)\n",
