trying to solve network training issue
- Using only last features of backbone net for classification head
* still no improvements

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -270,9 +270,10 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
     "                        --opt sgd \\\n",
-    "                        --lr 3e-4 \\\n",
+    "                        --lr 1e-1 \\\n",
     "                        --lr_delta 1e-6 \\\n",
-    "                        --weight_decay 0.01 \\\n",
+    "                        --weight_decay 1e-4 \\\n",
+    "                        --lr_warmup -1 \\\n",
     "                        --max_epoch 100 \\\n",
     "                        --batch_size 12 \\\n",
     "                        --accumulation_steps 3 \\\n",
@@ -401,14 +402,15 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
     "                            --opt sgd \\\n",
-    "                            --lr 3e-4 \\\n",
+    "                            --lr 1e-1 \\\n",
     "                            --lr_delta 1e-6 \\\n",
     "                            --weight_decay 1e-4 \\\n",
+    "                            --lr_warmup -1 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 12 \\\n",
     "                            --accumulation_steps 3 \\\n",
-    "                            --tag 2_1_img_cls_transferlr \\\n",
     "                            --pretrained_backend \\\n",
+    "                            --tag 2_1_img_cls_transferlr \\\n",
     "                            --train_percent .90 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../data/train \\\n",
