trained img-cls sucessfully
- achieved
      best_acc_train : 0.99113  best_acc_val : 0.97917
      best_f1_train : 0.99169  best_f1_val : 0.98317
for image classification task
- feature maps are not representative and does not pinpoint birds

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -269,13 +269,14 @@
    "outputs": [],
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
-    "                        --opt sgd \\\n",
-    "                        --lr 3e-4 \\\n",
-    "                        --lr_delta 1e-6 \\\n",
-    "                        --weight_decay 0.01 \\\n",
+    "                        --opt adam \\\n",
+    "                        --lr 1e-5 \\\n",
+    "                        --lr_delta 1e-5 \\\n",
+    "                        --lr_warmup 4e-2 \\\n",
+    "                        --weight_decay 0 \\\n",
     "                        --max_epoch 100 \\\n",
     "                        --batch_size 12 \\\n",
-    "                        --accumulation_steps 3 \\\n",
+    "                        --accumulation_steps 1 \\\n",
     "                        --tag 1_1_img_cls_scratch \\\n",
     "                        --train_percent .90 \\\n",
     "                        --use_p_of_data 1 \\\n",
@@ -303,9 +304,20 @@
     "idx = random.randint(0, len(dataset)-1)\n",
     "img = dataset[idx][0]\n",
     "\n",
+    "model.eval()\n",
+    "#get features\n",
     "features = get_features(model, [img], device)\n",
     "\n",
     "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
     "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
     "\n",
     "# print(img.shape)\n",
@@ -313,9 +325,18 @@
     "#     print(feat.shape)\n",
     "#     print(resize_func(feat, img.shape[1:]).shape)\n",
     "\n",
-    "axarr[0, 0].imshow((img.permute((1, 2, 0))*np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406])))\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
     "for j in range(1, 6):\n",
-    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[1:]))"
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
    ]
   },
   {
@@ -368,9 +389,20 @@
     "idx = random.randint(0, len(dataset)-1)\n",
     "img = dataset[idx][0]\n",
     "\n",
+    "model.eval()\n",
+    "#get features\n",
     "features = get_features(model, [img], device)\n",
     "\n",
     "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
     "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
     "\n",
     "# print(img.shape)\n",
@@ -378,9 +410,18 @@
     "#     print(feat.shape)\n",
     "#     print(resize_func(feat, img.shape[1:]).shape)\n",
     "\n",
-    "axarr[0, 0].imshow((img.permute((1, 2, 0))*np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406])))\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
     "for j in range(1, 6):\n",
-    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[1:]))"
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
    ]
   },
   {
@@ -400,13 +441,14 @@
    "outputs": [],
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
-    "                            --opt sgd \\\n",
-    "                            --lr 3e-4 \\\n",
-    "                            --lr_delta 1e-6 \\\n",
-    "                            --weight_decay 1e-4 \\\n",
+    "                            --opt adam \\\n",
+    "                            --lr 1e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --lr_warmup 1e-1 \\\n",
+    "                            --weight_decay 0 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 12 \\\n",
-    "                            --accumulation_steps 3 \\\n",
+    "                            --accumulation_steps 1 \\\n",
     "                            --tag 2_1_img_cls_transferlr \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .90 \\\n",
@@ -435,9 +477,20 @@
     "idx = random.randint(0, len(dataset)-1)\n",
     "img = dataset[idx][0]\n",
     "\n",
+    "model.eval()\n",
+    "#get features\n",
     "features = get_features(model, [img], device)\n",
     "\n",
     "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
     "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
     "\n",
     "# print(img.shape)\n",
@@ -445,9 +498,18 @@
     "#     print(feat.shape)\n",
     "#     print(resize_func(feat, img.shape[1:]).shape)\n",
     "\n",
-    "axarr[0, 0].imshow((img.permute((1, 2, 0))*np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406])))\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
     "for j in range(1, 6):\n",
-    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[1:]))"
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
    ]
   },
   {
