--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -281,6 +281,7 @@
     "                        --train_percent .90 \\\n",
     "                        --use_p_of_data 1 \\\n",
     "                        --data_dir $(pwd)/../data/train \\\n",
+    "                        --load_from_json \\\n",
     "                        --log_dir $(pwd)/experiments"
    ]
   },
@@ -454,6 +455,7 @@
     "                            --train_percent .90 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../data/train \\\n",
+    "                            --load_from_json \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
