--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -110,6 +110,7 @@
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --load_from_json \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -194,6 +195,7 @@
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --load_from_json \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -367,6 +369,7 @@
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --load_from_json \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -541,6 +544,7 @@
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --load_from_json \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
