--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%config Completer.use_jedi = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import torchvision\n",
     "import torch.nn.functional as F\n",
@@ -77,7 +86,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "dataset = BirdDetection(image_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\")\n",
+    "dataset = BirdDetection(images_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\")\n",
     "dataset = TransformDatasetWrapper(dataset, transform)\n",
     "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False)\n",
     "\n",
