added regularization methods
1. Batch Normalization
2. Weight Decay
3. Dropout
4. Data Augmentation

* dropout didn't workout

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -6,15 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config Completer.use_jedi = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import torch\n",
     "import torchvision\n",
     "import torch.nn.functional as F\n",
@@ -283,7 +274,7 @@
     "                        --opt adam \\\n",
     "                        --lr 1e-5 \\\n",
     "                        --lr_delta 1e-5 \\\n",
-    "                        --lr_warmup 4e-2 \\\n",
+    "                        --lr_warmup 1e-1 \\\n",
     "                        --weight_decay 0 \\\n",
     "                        --max_epoch 100 \\\n",
     "                        --batch_size 12 \\\n",
@@ -455,14 +446,14 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
     "                            --opt adam \\\n",
-    "                            --lr 1e-5 \\\n",
+    "                            --lr 1e-4 \\\n",
     "                            --lr_delta 1e-5 \\\n",
-    "                            --lr_warmup 1e-1 \\\n",
-    "                            --weight_decay 0 \\\n",
-    "                            --max_epoch 100 \\\n",
+    "                            --lr_warmup 4e-2 \\\n",
+    "                            --weight_decay 4e-5 \\\n",
+    "                            --max_epoch 130 \\\n",
     "                            --batch_size 12 \\\n",
-    "                            --accumulation_steps 1 \\\n",
-    "                            --tag 2_1_img_cls_transferlr \\\n",
+    "                            --accumulation_steps 3 \\\n",
+    "                            --tag avg_2_1_img_cls_transferlr \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .90 \\\n",
     "                            --use_p_of_data 1 \\\n",
